@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Merge NPC and MAGIC_EAR handling, add comments, fix prototype to use const.
+ include/sproto.h
+ server/monster.c
+Nicolas Weeger 2008-05-11
+
 Document a few things.
  plugins/cfanim/cfanim.c
  plugins/cfanim/include/cfanim_proto.h
